2/28/12 fix rendering order so that behavior looks plausible when probe is close to light
2/28/12 display correct value on AT detector based on its location
2/28/12 update beam only when it's visible
2/28/12 major simplification of BeamNode
2/28/12 add model of light beam, detect interaction with detector probe
2/28/12 change drag bounds of ruler so that it can't get lost behind control panel
# 0.00.13 (61715) Feb 23, 2012
2/23/12 Beers: resize cuvette only using arrow (event handlers were attache to the wrong node)
2/23/12 Concentration: replace various getters with public final fields in model classes
2/23/12 Concentration: verified that this sim is fully instrumented for data collection
2/23/12 Concentration: add non-interactive simsharing message for solution
2/23/12 Concentration: screenshot
2/23/12 reduce cuvette stroke width from 2 to 1.5 so it doesn't look so heavy
2/23/12 increase font size on ruler
2/23/12 Beers: increase vertical space for radio buttons in AT body (increase height of image files)
2/23/12 fix transparency at corners of meter body images
2/23/12 revised model.txt with JC's contributions
2/23/12 Beers: reset all solutions on Reset All
2/23/12 Concentration: fix for: make shaker empty, then drain out a little bit of solution, one grain of solute comes out of the shaker while activating the drain
2/23/12 Beers: setOpaque(false) for radio buttons
2/22/12 color center and right beam segments based on wavelength and %T, use gradient for beam segment in cuvette
2/22/12 show vertical diameter line in detector, for debugging
2/22/12 restore ability to move detector
# 0.00.12 (61619) Feb 22, 2012
2/22/12 dev version to verify absorbance (A) and transmittance (T) models
2/22/12 change molar absorptivity for Drink Mix, remove molar scaling factor from model
2/22/12 check in JC's latest spreadsheet
2/22/12 temporarily make detector position fixed
2/22/12 add alpha to left segment of beam
2/22/12 fix molar conversion factor for Drink Mix